[tool.poetry]
name = "wahoo_hook"
version = "0.1.0"
description = "webhook方式接收wahoo锻炼数据并存入数据库"
authors = ["wangcw <redgreat@msn.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = { extras = ["email"], version = "^2.10.4" }
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
# uvloop = "^0.21.0"
httptools = "^0.6.4"
uuid = "^1.30"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
SQLAlchemy-Utils = "^0.41.2"
python-jose = "^3.3.0"
SQLAlchemy = "^2.0.36"
python-multipart = "^0.0.20"
greenlet = "^3.1.1"
httpx = "^0.28.1"
pydantic-settings = "^2.7.0"
redis = "^5.2.1"
arq = "^0.26.1"
gunicorn = "^23.0.0"
bcrypt = "^4.2.1"
fastcrud = "^0.15.5"
faker = "^33.1.0"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741",  # Ambiguous variable name
    # "UP035", # deprecated-assertion
]
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
    "F403", # star imports
]

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.pydocstyle]
convention = "numpy"
