[tool.poetry]
name = "wahoo_hook"
version = "0.1.0"
description = "webhook方式接收wahoo锻炼数据并存入数据库"
authors = ["wangcw <redgreat@msn.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
asyncpg = "^0.29.0"
uvicorn = "^0.34.0"
PyYAML = "^6.0.2"
garmin-fit-sdk = "^21.158.0"
aiohttp = "^3.11.11"
loguru = "^0.7.3"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
